正常返回结果

--- a/ui/src/app/app.component.html
+++ b/ui/src/app/app.component.html
@@ -1,6 +1,6 @@
 <main>
     <div class="header-content">
-        <app-header></app-header>
+        <app-header>SSO集成样例</app-header>
     </div>
     <router-outlet></router-outlet>
 </main>
