--- a/ui/src/app/user/user-group/user-group.component.html
+++ b/ui/src/app/user/user-group/user-group.component.html
@@ -1,22 +1,23 @@
 <main>
     <div class="first-level"></div>
     <div class="content">
+        <!--{{tableList}}-->
         <div class="shadow-content">
             <div class="content-body">
                 <div class="content-table">
-                    <nz-table #userTable [nzData]="tableList" [nzLoading]="laoding" [nzFrontPagination]="false"
-                              [nzShowQuickJumper] = "true" nzShowSizeChanger="true" >
-                        <thead>
-                        <tr>
-                            <th>获取结果</th>
-                        </tr>
-                        </thead>
-                        <tbody>
-                        <tr *ngFor="let data of userTable.data">
-                            <td title="{{data}}">{{data}}</td>
-                        </tr>
-                        </tbody>
-                    </nz-table>
+                    <!--<nz-table #userTable [nzData]="tableList" [nzFrontPagination]="false">-->
+                        <!--<thead>-->
+                        <!--<tr>-->
+                            <!--<th>获取结果</th>-->
+                        <!--</tr>-->
+                        <!--</thead>-->
+                        <!--<tbody>-->
+                        <!--<tr *ngFor="let data of userTable.data">-->
+                            <!--<td title="{{data}}">{{data}}</td>-->
+                        <!--</tr>-->
+                        <!--</tbody>-->
+                    <!--</nz-table>-->
+                    {{tableList}}
                 </div>
             </div>
         </div>
