--- a/ui/src/app/user/user-group/user-group.component.less
+++ b/ui/src/app/user/user-group/user-group.component.less
@@ -246,3 +246,10 @@ td .hui {
     height: 15px;
     line-height: 15px;
 }
+
+.content-table{
+    text-align: center;
+    min-height: 100px;
+    font-size: 16px;
+    line-height: 100px;
+}
