--- a/ui/src/app/user/user-group/user-group.component.less
+++ b/ui/src/app/user/user-group/user-group.component.less
@@ -247,9 +247,9 @@ td .hui {
     line-height: 15px;
 }
 
-.content-table{
-    text-align: center;
-    min-height: 100px;
-    font-size: 16px;
-    line-height: 100px;
-}
+//.content-table{
+//    text-align: center;
+//    min-height: 100px;
+//    font-size: 16px;
+//    line-height: 100px;
+//}
